# VectorworksAutoDimensionPlugin

./: .gitignore  CMakeLists.txt  Install2025ToProgramFilesAsAdmin.cmd  README.md  install-built-plugin.ps1
docs/: vectorworks-2025-2026-sdk-notes.md
include/vwad/: AutoDimensionGeometry.h  SDKComplexGeometry.h
resources/: AutoDimensionPlugin.credentials.json.template
scripts/: build-release.ps1  install-2025-programfiles-admin.ps1
sdk/: EventSinkIntegrationExample.cpp
sdk-projects/2025/AutoDimensionPlugin/: AutoDimensionPlugin.vcxproj
sdk-projects/2025/AutoDimensionPlugin/KeeplAutoDimTest.vwr/Strings/: KeeplAutoDim.vwstrings  KeeplAutoDimTest.vwstrings
sdk-projects/2025/AutoDimensionPlugin/Resources/: PluginResource.h
sdk-projects/2025/AutoDimensionPlugin/Source/: AutoDimensionObj.cpp  AutoDimensionObj.h  ModuleMain.cpp
sdk-projects/2025/AutoDimensionPlugin/Source/Prefix/: StdAfx.cpp
sdk-projects/2026/AutoDimensionPlugin/: AutoDimensionPlugin.sln  AutoDimensionPlugin.vcxproj  AutoDimensionPlugin.vcxproj.filters
sdk-projects/2026/AutoDimensionPlugin/AutoDimensionPlugin.vwr/Strings/: AutoDimensionPlugin.vwstrings  Localizable Strings.vwstrings
sdk-projects/2026/AutoDimensionPlugin/Source/: AutoDimensionObj.cpp  AutoDimensionObj.h  ModuleMain.cpp
sdk-projects/2026/AutoDimensionPlugin/Source/Prefix/: CommonPrefix.h  StdAfx.h
src/: AutoDimensionGeometry.cpp
src/Vectorworks/: AutoDimensionEventSink.cpp  AutoDimensionEventSink.h
